Fixed improper text wrapping in sidebar.

--- a/otterwiki/static/css/partials/sidebar.css
+++ b/otterwiki/static/css/partials/sidebar.css
@@ -130,18 +130,18 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
     padding-left : calc(2 * var(--spacing) - var(--radius) + 0.5rem);
     color: rgba(0,0,0,.7);
     padding-top: 0.5rem;
-    word-break: break-all;
+    word-break: break-word;
     box-sizing: border-box;
 }
 
 .sidebarmenu li > div.summary-details {
     box-sizing: inherit;
-    word-break: break-all;
+    word-break: break-word;
     list-style: none;
 }
 
 .sidebarmenu li > div.summary-details > a {
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .parent-sidebar-menu > li {
